syntax = "proto3";
option go_package = "./pb";

message Transaction {
    string version = 1;
    bytes Hash = 2;
    repeated TransactionInput inputs = 3;
    repeated TransactionOutput outputs = 4;
}

message TransactionInput {
    bytes address = 1;
    int64 amount = 2;
    bytes publicKey = 3;
    bytes signature = 4;
}

message TransactionOutput {
    bytes address = 1;
    int64 amount = 2;
    bool spent = 3;
}
